Fixes image editor sizing box's dashed border displaying too big in Firefox.

--- a/tool-ui/src/main/webapp/style/jquery.imageeditor.less
+++ b/tool-ui/src/main/webapp/style/jquery.imageeditor.less
@@ -86,8 +86,9 @@
 }
 
 .imageEditor-sizeBox {
+    border: 1px dashed @color-background;
+    .box-sizing(border-box);
     cursor: move;
-    outline: 1px dashed @color-background;
 }
 
 .imageEditor-resizer {
